--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +35,93 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  background-color: #222629; /* Dark Background */
+  color: #ffffff; /* White text for contrast */
+}
+
+.navbar-custom {
+  /* background-color: #222629; Dark Background */
+  /* position: fixed; Fixed at the top */
+  width: 100%; /* Full width */
+  z-index: 1000; /* Above other items */
+  top: 0; /* Stick to the top */
+  margin-top: 10px;
+}
+
+.hr-custom {
+  border-color: #b1daf6 !important; /* Green Accent for Border */
+  height: 0px;
+  margin-top: 10px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.navbar-div-custom {
+  background-color: #222629; /* Dark Background */
+  position: fixed; /* Fixed at the top */
+  width: 100%; /* Full width */
+  z-index: 1000; /* Above other items */
+  top: 0; /* Stick to the top */
+}
+
+.navbar-brand-custom {
+  color: #86C232; /* Green Accent for Brand */
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  margin-left: 5%;
+}
+
+.nav-link-custom {
+  color: #61892F !important; /* Green Accent for Links */
+  background-color: #ffffff00 !important;
+  /* width: 100%; */
+}
+
+.navbar-custom .navbar-toggler {
+  border-color: #86C232; /* Green Accent for Toggler */
+  margin-right: 5%;
+}
+
+.content-container {
+  /* background-color: #222629; Dark Background */
+  color: #ffffff; /* White text for contrast */
+  min-height: 80vh;
+  padding: 20px;
+  border-radius: 5px;
+  padding-top: 56px;
+}
+
+.footer-custom {
+  /* background-color: #222629; Dark Background */
+  color: #86C232; /* Green Accent for Footer */
+  padding: 20px;
+  text-align: center;
+}
+
+.button-custom {
+  background-color: #61892F; /* Olive Green Button */
+  color: #ffffff; /* White text for buttons */
+  border: none;
+}
+
+.button-Toggle {
+  background-color: #ffffff00; /* Olive Green Button */
+  color: #ffffff; /* White text for buttons */
+  border: none;
+}
+
+.button-custom:hover {
+  background-color: #86C232; /* Lime Green on Hover */
+}
+
+.border-custom {
+  border-color: #3c3f41 !important; /* Green Accent for Border */
+}
+
+.offCanvasNav  {
+  background-color: #222629;
+  color: #ffffff;
 }
